refactor: criando método para verificar se o item já foi salvo anteriormente

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,10 @@
         </form>
       </div>
     </div>
+    
+    <div class="toast" id="toast">
+      <span>Produto adicionado com sucesso</span>
+    </div>
 
     <script src="js/index.js"></script>
     <script src="js/jquery.js"></script>
