refactor: changing reply messages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,9 +40,7 @@
       </div>
     </div>
     
-    <div class="toast" id="toast">
-      <span>Produto adicionado com sucesso</span>
-    </div>
+    <div class="toast" id="toast"></div>
 
     <script src="js/index.js"></script>
     <script src="js/jquery.js"></script>
